--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="image" data-name="cat-1"><span><img src="assets/cat-1/1.jpg" alt=""></span></div>
       <div class="image" data-name="cat-2"><span><img src="assets/cat-2/1.jpg" alt=""></span></div>
       <div class="image" data-name="cat-3"><span><img src="assets/cat-3/1.jpg" alt=""></span></div>
-      <div class="image" data-name="cat-1"><span><img src="assets/cat-1/2.jpg" alt=""></span></div>
+      <!-- <div class="image" data-name="cat-1"><span><img src="assets/cat-1/2.jpg" alt=""></span></div> -->
       <div class="image" data-name="cat-2"><span><img src="assets/cat-2/2.jpg" alt=""></span></div>
       <div class="image" data-name="cat-3"><span><img src="assets/cat-3/2.jpg" alt=""></span></div>
       <div class="image" data-name="cat-1"><span><img src="assets/cat-1/3.jpg" alt=""></span></div>
@@ -32,9 +32,9 @@
       <div class="image" data-name="cat-3"><span><img src="assets/cat-3/3.jpg" alt=""></span></div>
       <div class="image" data-name="cat-1"><span><img src="assets/cat-1/4.jpg" alt=""></span></div>
       <div class="image" data-name="cat-2"><span><img src="assets/cat-2/4.jpg" alt=""></span></div>
-      <div class="image" data-name="cat-3"><span><img src="assets/cat-3/4.jpg" alt=""></span></div>
+      <!-- <div class="image" data-name="cat-3"><span><img src="assets/cat-3/4.jpg" alt=""></span></div> -->
       <div class="image" data-name="cat-1"><span><img src="assets/cat-1/5.jpg" alt=""></span></div>
-      <div class="image" data-name="cat-2"><span><img src="assets/cat-2/5.jpg" alt=""></span></div>
+      <!-- <div class="image" data-name="cat-2"><span><img src="assets/cat-2/5.jpg" alt=""></span></div> -->
       <div class="image" data-name="cat-3"><span><img src="assets/cat-3/5.jpg" alt=""></span></div>
     </div>
   </div>
